# nix-todo-demo

./: .envrc  Cargo.toml  Justfile  flake.nix
.sqlx/: query-0fef3332f427e94c64b868f2451e628652c6cdbcc77f1d683e547f0258d58970.json  query-91e6345f258f0027c974f9df65e8134e90275b3397803b6960835212fa56c7d1.json
migrations/: 20240201133534_Basic_TODO_DB.sql
scripts/: wait-for-db.sh
src/: main.rs
templates/: base.html  home.html
